--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 #heading{
     margin: auto;
     padding: 20px;
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
+    font-family: "Times New Roman", Times, serif;
+    position:relative;
+    font-size: 50px;
 }
 
 #pageTop{
@@ -36,36 +37,40 @@
 
 .result{
     margin: auto;
-    margin-top: 10px;
     width: 63%;
     text-align: center;
-    border: 2px ridge plum;
-    font-size: 20px;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    
+    font-size: 28px;
+    font-family: 'Tahoma';
+    padding: 15px;
+    font-weight: bold;
+    margin-top: 45px;
 }
 
 .buttons{
     border-radius: 8px;
     border-width: 1.5px;
     padding: 10px;
-    background-color:whitesmoke;
+    background-color:rgb(210, 223, 245);
     margin: auto;
+    font-weight: bold;
+    color:rgb(26, 29, 49);
+    text-align: center;
 } 
 
 .buttonContainer{
 padding:10px;
 display:inline;
-margin:auto;
+margin: auto;
 
 }
 
 .bottom-buttons{
-    width: 100%;
-    display: inline;
     margin:auto;
-    display: -webkit-inline-box;
-    text-align: center;
+    position: absolute; 
+    left: 50%; 
+    transform: translate(-50%, -50%); 
+    margin-top: 20px;
+    
 }
 
 #colorButtonContainer{
